--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,1 +1,26 @@
-
+pipeline{
+    agent any 
+    
+    stages{
+        stage('HELLO'){
+            steps{
+                echo 'Hello word'
+            }
+        }
+        stage('BUILD'){
+            steps{
+                echo 'Developpement'
+            }
+        }
+        stage('Test'){
+            steps{
+                echo 'testing'
+            }
+        }
+        stage('DEPLOY'){
+            steps{
+                echo 'mise en production'
+            }
+        }
+    }
+}
